--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "css-loader": "^3.5.3",
     "eslint": "^6.8.0",
     "eslint-loader": "^3.0.4",
+    "eslint-plugin-json": "^2.1.1",
     "eslint-plugin-react": "^7.19.0",
     "file-loader": "^4.3.0",
     "gh-pages": "^2.2.0",
